# ssm-tools

./: .gitignore  BLAS.md  Cargo.toml  LICENSE  README.md  asv.conf.json  build.rs  index.json  info.json  pyproject.toml  regressions.json  regressions.xml
.asv/results/: benchmarks.json
.asv/results/kano/: 2c7e8ea3-uv-py3.13-pip+pyfar-e .._pyfar.json  8ce50890-uv-py3.13-pip+pyfar-e .._pyfar.json  90595d2c-uv-py3.13-pip+pyfar-e .._pyfar.json  c73a9a2d-uv-py3.13-pip+pyfar-e .._pyfar.json  f77e282d-uv-py3.13-pip+pyfar-e .._pyfar.json  machine.json
.github/workflows/: build.yml  ci.yml  lint.yml  test.yml
benchmarks/: comparison.py  solve_random.py
graphs/summary/: comparison.Compare.time_solver.json  comparison.Compare.track_error.json  solve_random.SolveRandomBase.time_solver.json  solve_random.SolveRandomBase.track_error.json  solve_random.SolveRandomNumba.time_solver.json  solve_random.SolveRandomNumba.track_error.json
src/: lib.rs
src/ssm_tools/: __init__.py  models.py  solvers.py  systems.py
src/ssm_tools/scripts/: reduce_fabian.py
