[package]
name = "ssm-tools"
version = "0.1.0"
edition = "2021"

[lib]
name = "ssm_tools_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = "0.16"
blas-src = { version = "0.14", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.10", default-features = false, features = ["system"] }
