[project]
name = "ssm-tools"
version = "0.1.0"
description = "Python toolbox for state-space systems of acoustic systems."
readme = "README.md"
authors = [
    { name = "Art Pelling", email = "a.pelling@tu-berlin.de" }
]
requires-python = ">=3.13"
dependencies = [
    "across",
    "irdl",
    "numba>=0.62.1",
    "numpy>=2.3.3",
    "pyfar@git+https://github.com/pyfar/pyfar.git@state-space-models",
    "pymor>=2025.1.2",
    "scipy>=1.16.2",
]

[project.scripts]
reduce-fabian = "ssm_tools.scripts.reduce_fabian:main"


[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "ssm_tools._rs"

[dependency-groups]
dev = [
    "maturin>=1.13.1",
    "ruff>=0.14.8",
]



[tool.uv.sources]
across = { workspace = true }
pyfar = { git = "https://github.com/pyfar/pyfar", rev = "fd33a589807f75ef238c5ac7f6436276eb4503e3" }

[tool.uv.workspace]
members = ["packages/*"]


[tool.basedpyright]
venv = ".venv"
typeCheckingMode = 'off'


[tool.ruff]
src = ["src"]
line-length = 120

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "ICN", "N", "Q", "W"]
ignore = [
    "D100", "D104", "D401",
    "N803",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 100

[tool.ruff.lint.pydocstyle]
convention = "numpy"
